[package]
name = "classic"
version = "0.1.0"
authors = ["David S. Smith <david.smith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
ndarray = "0.12.1"
#packed_simd = "0.3.3"
pathfinding = "2.0.3"
fnv = "1.0.3"
#itertools = "0.8.0"
text_io = "0.1.8"
rayon = "1.3.0"
